Conditionally shows authentication options
Improves the login page by conditionally rendering the
passkey and external login options based on configuration settings.
This allows for more flexibility in authentication methods.

Fixes #33

--- a/src/Starbender.RecipeApp/Components/Account/Pages/Login.razor
+++ b/src/Starbender.RecipeApp/Components/Account/Pages/Login.razor
@@ -43,11 +43,16 @@
                     <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
                 <hr />
-                <div class="d-flex flex-column">
-                    <span class="text-secondary mx-auto mt-2">OR</span>
-                    <PasskeySubmit Operation="PasskeyOperation.Request" Name="Input.Passkey" EmailName="Input.Email" class="btn btn-link mx-auto">Log in with a passkey</PasskeySubmit>
-                </div>
-                <hr />
+
+                @if (PassKeyEnabled)
+                {
+                    <div class="d-flex flex-column">
+                        <span class="text-secondary mx-auto mt-2">OR</span>
+                        <PasskeySubmit Operation="PasskeyOperation.Request" Name="Input.Passkey" EmailName="Input.Email" class="btn btn-link mx-auto">Log in with a passkey</PasskeySubmit>
+                    </div>
+                    <hr />
+                }
+
                 <div>
                     <p>
                         <a href="Account/ForgotPassword">Forgot your password?</a>
@@ -62,18 +67,24 @@
             </EditForm>
         </section>
     </div>
-    <div class="col-lg-4 col-lg-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            <ExternalLoginPicker />
-        </section>
-    </div>
+
+    @if (EntraIdEnabled)
+    {
+        <div class="col-lg-4 col-lg-offset-2">
+            <section>
+                <h3>Use another service to log in.</h3>
+                <hr />
+                <ExternalLoginPicker />
+            </section>
+        </div>
+    }
 </div>
 
 @code {
     private string? errorMessage;
     private EditContext editContext = default!;
+
+    [Inject] private IConfiguration Configuration { get; set; } = default!;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -84,10 +95,14 @@
     [SupplyParameterFromQuery]
     private string? ReturnUrl { get; set; }
 
+    private bool PassKeyEnabled { get; set; }
+    private bool EntraIdEnabled { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         Input ??= new();
-
+        PassKeyEnabled = Configuration.GetValue("Authentication:Passkey:Enabled", false);
+        EntraIdEnabled = Configuration.GetValue("Authentication:EntraId:Enabled", false);
         editContext = new EditContext(Input);
 
         if (HttpMethods.IsGet(HttpContext.Request.Method))
